updates to experiment

--- a/experiments/1kidRatchetConj/game-3.html
+++ b/experiments/1kidRatchetConj/game-3.html
@@ -18,6 +18,7 @@
     <script src="../_shared/js/stream-V2.js"></script>
 
     <!-- cocolab general utilities -->
+    <!-- <script src="js/mmturkey.js"></script> -->
     <script src="../_shared/js/mmturkey.js"></script>
     <script src="../_shared/js/browserCheck.js"></script>
     <script src="../_shared/js/utils.js"></script>
@@ -32,7 +33,7 @@
 
     <!-- experiment file -->
     <script src="js/game-3.js"></script>
-    <script src="js/welcome_critter.js"></script>
+    <!-- <script src="js/welcome_critter.js"></script> -->
 
     <script src="../_shared/js/uniqueturker.js"></script>
 
