--- a/experiments/1kidRatchetConj/game-3.html
+++ b/experiments/1kidRatchetConj/game-3.html
@@ -126,8 +126,8 @@
     </table>
     <button onclick="_s.button()">Continue</button>
     <div class="err">Please adjust the slider before continuing.</div>
-                <p class ="audienceimages"> <span id ="childpicaudience" ></span>
-        <img src= audienceimageadult alt="Adult" id="adultpic"></img></p>
+                <p class ="childimage"> <span id = "childpicaudience"></span> 
+                <p class = "adultimage"> <span id = "adultpicaudience"></span>
   </div>
 
 <div class="slide" id="accuracy_slide">
@@ -162,7 +162,7 @@
       <label><input type="radio" name="likert" value="Neutral"/>Neutral</label>
       <label><input type="radio" name="likert" value="Agree"/>Agree</label>
       <label><input type="radio" name="likert" value="Strongly Agree"/>Strongly Agree</label>
-
+<!-- 
       <p>Did you read the instructions and do you think you did the HIT correctly?</p>
       <label><input type="radio"  name="assess" value="No"/>No</label>
       <label><input type="radio"  name="assess" value="Yes"/>Yes</label>
@@ -172,7 +172,7 @@
       <textarea id="problems" rows="2" cols="50" spellcheck=false></textarea>
 
       <p>What do you think is a fair price for the work you did?</p>
-      <textarea id="fairprice" rows="1" cols="10" spellcheck=false></textarea>
+      <textarea id="fairprice" rows="1" cols="10" spellcheck=false></textarea> -->
 
       <p>Gender:
         <select id="gender">
@@ -198,14 +198,14 @@
 
       <p>Native Language: <input type="text" id="language"/></p>
       <label>(the language(s) spoken at home when you were a child)</label>
-
+<!-- 
       <p>Did you enjoy the hit?</p>
       <select id="enjoyment">
         <label><option value="-1"></option></label>
         <label><option value="0">Worse than the Average HIT</option></label>
         <label><option value="1" >An Average HIT</option></label>
         <label><option value="2">Better than average HIT</option></label>
-      </select>
+      </select> -->
 
       <p>We would be interested in any comments you have about this experiment. Please type them here:</p>
       <textarea id="comments" rows="3" cols="50" spellcheck=false></textarea>
