updates to mmturkey and related files

--- a/experiments/1kidRatchetConj/game-3.html
+++ b/experiments/1kidRatchetConj/game-3.html
@@ -18,8 +18,8 @@
     <script src="../_shared/js/stream-V2.js"></script>
 
     <!-- cocolab general utilities -->
-    <!-- <script src="js/mmturkey.js"></script> -->
-    <script src="../_shared/js/mmturkey.js"></script>
+    <script src="js/mmturkey.js"></script>
+    <!-- <script src="../_shared/js/mmturkey.js"></script> -->
     <script src="../_shared/js/browserCheck.js"></script>
     <script src="../_shared/js/utils.js"></script>
 
